--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,78 @@
-*{
+/* fonts */
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Licorice&family=Poppins&display=swap');
+
+/* common styles or utilities */
+body{
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+    background: #F3F1FF;
 }
-
-/* top players stye */
+main{
+    display: flex; 
+    align-items: center;
+    flex-direction: column;
+}
+.container{
+    background-color: #FFFFFF;
+    width: 870px;
+    padding: 30px;
+}
+.section-title{
+    color: #562EFF;
+    font-size: 24px; 
+    margin-top: 10px;
+}
+hr{
+    border: 1px solid #D1D1D1;
+    margin-top: 30px;
+}
+/* Top players style */
 .top-players{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    margin-bottom: 30px;
 }
-
+.players{
+    display: grid; 
+    grid-template-columns: repeat(3,1fr);
+    grid-row-gap: 30px
+}
 .player{
     display: flex; 
     align-items: center;
 }
-
 .player img{
-    width: 56px; 
+    width: 56px;
     height: 56px;
+}
+.player-name{
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+/* top blogs styles */
+.blogs{
+    display: grid; 
+    grid-template-columns: repeat(2,1fr);
+    grid-row-gap: 26px;
+}
+.blog{
+    display: flex;
+}
+.thumbnail img{
+    height: 117px;
+    width: 177px;
+}
+.blog-info{
+    margin-left: 16px;
+}
+.blog-title{
+    font-size: 20px;
+}
+.blog-author{
+    color:#9F9F9F;
+}
+.blog-author a{
+    text-decoration: none;
+    color:#562EFF;
+    font-size: 16px;
 }
